# acela-ai-agent

./: CLAUDE.md  Dockerfile  README.md  docker-compose.yml  index_documents.py  pyproject.toml
.github/workflows/: ci.yml
app/: agent_graph.py  logger.py  main.py  utils.py  variables.py
app/agent/: __init__.py  generate.py  hallucination_grader.py  http_tool.py  llm_fallback.py  query_rewriter.py  retrieval_grader.py  retrival_grader.py  router.py  summarize.py  title.py  web_search.py
app/submitter/: agent.py  prompt.py  tools.py
app/vectorestore/: __init__.py
docs/: gen_architecture.py
src/: app.py  main.py  variables.py
src/agent/: __init__.py  generate.py  hallucination_grader.py  llm_fallback.py  retrival_grader.py  router.py  web_search.py
src/vectorestore/: __init__.py
